--- a/Web/Views/Shared/_Layout.cshtml
+++ b/Web/Views/Shared/_Layout.cshtml
@@ -69,9 +69,17 @@
                 $("#direccionForm").toggle(); // Alternar el valor de la propiedad 'display' entre 'none' y 'block'
                 $("#btnToggleForm").hide();
                 $("#no-direcion").hide();
+                
+
             });
         });
+
+        $("#btnSaveDireccion").click(function () {
+            saveDireccion();
+        });
     </script>
+
+
 
 
 
