--- a/Web/Views/Shared/_LayoutLogin.cshtml
+++ b/Web/Views/Shared/_LayoutLogin.cshtml
@@ -16,9 +16,9 @@
 
     <!-- Boxicons CSS -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link href="~/Content/Site.css?v=1.0" rel="stylesheet" />
+    <link href="~/Content/Site.css?v=1" rel="stylesheet" />
 
-    @Styles.Render("~/Content/css")
+    @*@Styles.Render("~/Content/css")*@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
@@ -44,7 +44,6 @@
         </script>
     }
 
-    <script src="~/Scripts/script.js?v=1.0"></script>
 
 </body>
 </html>
