--- a/Web/Views/Shared/_Layout.cshtml
+++ b/Web/Views/Shared/_Layout.cshtml
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta charset="utf-8" />
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title AgriStock</title>
 
@@ -16,7 +16,7 @@
 
 
     <link href="~/Content/Site.css?v=1.1" rel="stylesheet" />
- 
+
 
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
@@ -41,7 +41,7 @@
     @RenderSection("scripts", required: false)
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="~/Scripts/bootstrap.bundle.js"></script>
-    <script src="~/Scripts/script.js"></script>
+    <script src="~/Scripts/script.js?v=1.1"></script>
 
 
     <link href="https://cdn.datatables.net/1.13.4/css/jquery.dataTables.min.css" rel="stylesheet" />
@@ -68,18 +68,27 @@
             $("#btnToggleForm").click(function () {
                 $("#direccionForm").toggle(); // Alternar el valor de la propiedad 'display' entre 'none' y 'block'
                 $("#btnToggleForm").hide();
-                $("#no-direcion").hide();               
+                $("#no-direcion").hide();  
+                $("#direccion-label").hide(); 
 
             });
         });
 
         $(document).ready(function () {
             $("#btnToggleMetodoPago").click(function () {
+                $("#metodoPagoForm").toggle(); 
+                $("#btnToggleMetodoPago").hide();
+                $("#no-metPago").hide();
+                $("#metPago-label").hide(); 
             });
         });
 
         $("#btnSaveDireccion").click(function () {
             saveDireccion();
+        });
+
+        $("#btnSaveMetodoPago").click(function () {
+            saveMetodoPago();
         });
     </script>
 
